Add an item detail screen

--- a/CheckMates/Base.lproj/Main.storyboard
+++ b/CheckMates/Base.lproj/Main.storyboard
@@ -133,22 +133,22 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yib-Vd-FI1">
                                             <rect key="frame" x="8" y="21" width="39" height="21"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="39" id="Dp8-5e-dRQ"/>
+                                                <constraint firstAttribute="width" constant="39" id="n3o-4E-VHU"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Jd-4g-xoL">
-                                            <rect key="frame" x="60" y="21" width="463" height="21"/>
+                                            <rect key="frame" x="60" y="21" width="426" height="21"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wdo-LJ-hLW">
-                                            <rect key="frame" x="553" y="21" width="39" height="21"/>
+                                            <rect key="frame" x="508" y="21" width="84" height="21"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="39" id="zoZ-gz-KnF"/>
+                                                <constraint firstAttribute="width" constant="84" id="g9d-G1-nQu"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -156,22 +156,23 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="leading" secondItem="46n-XL-45c" secondAttribute="leadingMargin" id="0Zx-we-Oys"/>
-                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="baseline" secondItem="2Jd-4g-xoL" secondAttribute="baseline" id="HHt-AL-0nZ"/>
-                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="firstBaseline" secondItem="2Jd-4g-xoL" secondAttribute="firstBaseline" id="OnC-gD-7Rc"/>
-                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="top" secondItem="46n-XL-45c" secondAttribute="topMargin" constant="13" id="QW9-Ix-86N"/>
-                                        <constraint firstItem="Wdo-LJ-hLW" firstAttribute="trailing" secondItem="46n-XL-45c" secondAttribute="trailingMargin" id="YqZ-v4-LC0"/>
-                                        <constraint firstItem="Wdo-LJ-hLW" firstAttribute="leading" secondItem="2Jd-4g-xoL" secondAttribute="trailing" constant="30" id="ZPf-uP-60c"/>
-                                        <constraint firstItem="2Jd-4g-xoL" firstAttribute="baseline" secondItem="Wdo-LJ-hLW" secondAttribute="baseline" id="Zxu-eL-5lO"/>
-                                        <constraint firstItem="2Jd-4g-xoL" firstAttribute="leading" secondItem="Yib-Vd-FI1" secondAttribute="trailing" constant="13" id="hHb-dc-GQn"/>
-                                        <constraint firstItem="2Jd-4g-xoL" firstAttribute="firstBaseline" secondItem="Wdo-LJ-hLW" secondAttribute="firstBaseline" id="mTg-HZ-Tuo"/>
-                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="centerY" secondItem="46n-XL-45c" secondAttribute="centerY" id="wwM-1n-Do4"/>
+                                        <constraint firstItem="Wdo-LJ-hLW" firstAttribute="trailing" secondItem="46n-XL-45c" secondAttribute="trailingMargin" id="6ED-hF-ld0"/>
+                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="baseline" secondItem="2Jd-4g-xoL" secondAttribute="baseline" id="9Ji-0H-VEu"/>
+                                        <constraint firstItem="Wdo-LJ-hLW" firstAttribute="leading" secondItem="2Jd-4g-xoL" secondAttribute="trailing" constant="22" id="DeP-Lg-wJd"/>
+                                        <constraint firstItem="2Jd-4g-xoL" firstAttribute="firstBaseline" secondItem="Wdo-LJ-hLW" secondAttribute="firstBaseline" id="FQf-yU-6F3"/>
+                                        <constraint firstItem="2Jd-4g-xoL" firstAttribute="baseline" secondItem="Wdo-LJ-hLW" secondAttribute="baseline" id="Utv-RF-ATN"/>
+                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="centerY" secondItem="46n-XL-45c" secondAttribute="centerY" id="d1E-fP-dgz"/>
+                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="firstBaseline" secondItem="2Jd-4g-xoL" secondAttribute="firstBaseline" id="lFQ-pL-zdu"/>
+                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="top" secondItem="46n-XL-45c" secondAttribute="topMargin" constant="13" id="lX7-Oq-KS1"/>
+                                        <constraint firstItem="2Jd-4g-xoL" firstAttribute="leading" secondItem="Yib-Vd-FI1" secondAttribute="trailing" constant="13" id="mML-6E-5U3"/>
+                                        <constraint firstItem="Yib-Vd-FI1" firstAttribute="leading" secondItem="46n-XL-45c" secondAttribute="leadingMargin" id="w87-Bg-5pw"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="itemCount" destination="Yib-Vd-FI1" id="QLr-6C-Rxz"/>
                                     <outlet property="priceLabel" destination="Wdo-LJ-hLW" id="WTE-hR-DrN"/>
                                     <outlet property="titleLabel" destination="2Jd-4g-xoL" id="kp0-N4-DAq"/>
+                                    <segue destination="YDR-ZZ-2PO" kind="show" identifier="ShowItem" id="0Ij-NG-foQ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -184,6 +185,106 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="35W-XI-0r2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1831" y="123"/>
+        </scene>
+        <!--Item Detail View Controller-->
+        <scene sceneID="cwJ-8C-0BF">
+            <objects>
+                <viewController id="YDR-ZZ-2PO" customClass="ItemDetailViewController" customModule="CheckMates" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KOs-kT-GNN"/>
+                        <viewControllerLayoutGuide type="bottom" id="pXA-7S-Onb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yKs-2H-ISr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Blm-dz-fPM">
+                                <rect key="frame" x="20" y="20" width="560" height="523"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="G41-b9-yVq">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zpN-3g-eoa">
+                                                <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7T-YJ-Aey">
+                                                        <rect key="frame" x="0.0" y="0.0" width="65" height="30"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="OlI-Mw-6C3">
+                                                        <rect key="frame" x="73" y="0.0" width="487" height="30"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rBx-0B-h2P">
+                                        <rect key="frame" x="0.0" y="38" width="560" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYo-kf-go7">
+                                                <rect key="frame" x="0.0" y="0.0" width="65" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ykm-Oy-Rle">
+                                                <rect key="frame" x="73" y="0.0" width="487" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Z5r-R3-F0V">
+                                        <rect key="frame" x="0.0" y="76" width="560" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKA-9p-yiY">
+                                                <rect key="frame" x="0.0" y="0.0" width="65" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="xra-cP-ZIx">
+                                                <rect key="frame" x="73" y="0.0" width="487" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7M-yy-H7B">
+                                        <rect key="frame" x="0.0" y="114" width="560" height="409"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="OlI-Mw-6C3" firstAttribute="leading" secondItem="ykm-Oy-Rle" secondAttribute="leading" id="F83-I7-n8d"/>
+                                    <constraint firstItem="ykm-Oy-Rle" firstAttribute="leading" secondItem="xra-cP-ZIx" secondAttribute="leading" id="h5C-9q-DvU"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Blm-dz-fPM" firstAttribute="top" secondItem="KOs-kT-GNN" secondAttribute="bottom" id="3Xv-bU-cem"/>
+                            <constraint firstItem="Blm-dz-fPM" firstAttribute="leading" secondItem="yKs-2H-ISr" secondAttribute="leadingMargin" id="bOW-vW-Zxd"/>
+                            <constraint firstItem="pXA-7S-Onb" firstAttribute="top" secondItem="Blm-dz-fPM" secondAttribute="bottom" constant="8" id="c6H-JF-aCl"/>
+                            <constraint firstItem="Blm-dz-fPM" firstAttribute="trailing" secondItem="yKs-2H-ISr" secondAttribute="trailingMargin" id="lQz-kj-vyL"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="countField" destination="OlI-Mw-6C3" id="Elg-uw-Yj4"/>
+                        <outlet property="dateField" destination="g7M-yy-H7B" id="B4R-n2-RNA"/>
+                        <outlet property="priceField" destination="xra-cP-ZIx" id="y8v-0f-Rqp"/>
+                        <outlet property="titleField" destination="ykm-Oy-Rle" id="DqX-7v-7VO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WoS-ua-6e3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2511" y="123"/>
         </scene>
         <!--Enter Receipt-->
         <scene sceneID="aIh-Vr-pNH">
